// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt button Props border_radius: full 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-full"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--border-radius-large"
>
  This is a button
</button>
`;

exports[`Bolt button Props border_radius: small 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: block 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--block"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props display: inline@from-small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--inline@from-small"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: primary 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: secondary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--secondary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: tertiary 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--tertiary"
>
  This is a button
</button>
`;

exports[`Bolt button Props hierarchy: transparent 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--transparent"
>
  This is a button
</button>
`;

exports[`Bolt button Props icon after 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
  <span class="e-bolt-button__icon-after"
        aria-hidden="true"
  >
    <svg class="e-bolt-icon"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 32 32"
         aria-hidden="true"
    >
      <path fill="#151619"
            fill-rule="evenodd"
            d="M26.6 12.4c.6-.6.6-1.6 0-2.2s-1.6-.6-2.2 0L16 18.5l-8.3-8.4c-.6-.6-1.6-.6-2.2 0-.3.4-.5.8-.5 1.2s.2.8.5 1.1l9.4 9.4c.6.6 1.6.6 2.2 0z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
</button>
`;

exports[`Bolt button Props size: large 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--large"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: medium 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: small 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--small"
>
  This is a button
</button>
`;

exports[`Bolt button Props size: xsmall 1`] = `
<button type="button"
        class="e-bolt-button e-bolt-button--xsmall"
>
  This is a button
</button>
`;

exports[`Bolt button default 1`] = `
<button type="button"
        class="e-bolt-button"
>
  This is a button
</button>
`;
